# tilde

./: .gitignore  .wasm-pack.toml  .wasm-pack.toml.bak  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PHASE2_STDLIB_PLAN.md  PHASE_2A_SCHEDULER_DOCUMENTATION.md  README.md  SECURITY.md  build-web.sh  install.sh  serve-web.sh  test_block_chain_parse.rs  test_env.tilde  web-dev.sh
benchmark_comparison/: benchmark_final.js  benchmark_final.tails  profile_benchmark.tails  profile_benchmark.tilde  run_benchmarks.sh
benchmark_results/: bench_1758258627.json  bench_20250915_212721_dae6aac.txt  benchmarks.csv  memory.csv
docs/: BLOCKS.md  CLAUDE.md  CLOUD_PLATFORM_VISION.md  DEVELOPMENT.md  NEW_FEATURE.md  PERFORMANCE_TESTING.md  PLAN.md  RELEASE.md  STDLIB.md  SYNTAX.md
examples/: actions.tails  actions_simple.tails  actions_simple.tilde  anonymous_functions_demo.tde  api_polling.tde  api_polling.tilde  block_syntax_demo.tails  block_syntax_demo.tilde  calculator.tails  collatz.tails  complex_guess.tails  comprehensive_objects.tails  comprehensive_objects.tde  conditionals.tde  conditions.tilde  crypto_tracker.tilde  data_processing.tails  data_processing.tde  data_structure_madness.tails  data_structure_madness.tde  data_structure_madness.tilde  example_config_simple.tails  example_nested_simple.tails  example_profile_simple.tails  fibonacci.tails  fibonacci.tde  fibonacci.tilde  fibonacci_action.tails  fibonacci_action.tde  foreach_advanced.tails  foreach_advanced.tilde  function_chaining.tde  functional_programming.tails  functional_programming.tilde  graphics_bouncing_ball.tails  graphics_matrix_rain.tails  graphics_matrix_rain_2.tails  graphics_matrix_rain_2.tde  graphics_matrix_rain_3.tde  graphics_matrix_rain_4.tde  (+25 more)
plans/: music-engine-architecture.md
src/: ast.rs  evaluator.rs  file_io.rs  http.rs  intern.rs  lexer.rs  lib.rs  main.rs  random.rs  terminal.rs  value.rs  wasm.rs
tests/: anonymous_functions.rs  attempt_rescue_integration_test.rs  clear_function_integration_test.rs  crypto_integration_test.rs  date_arithmetic_integration_test.rs  date_comparison_integration_test.rs  date_components_integration_test.rs  date_formatting_integration_test.rs  date_integration_test.rs  encoding_integration_test.rs  env_integration_test.rs  filesystem_integration_test.rs  foreach_integration_test.rs  function_chain_integration_test.rs  function_chain_test.rs  http_integration_test.rs  integration_test.rs  integration_tsp.rs  json_integration_test.rs  list_operations_test.rs  math_advanced_integration_test.rs  negative_literals_test.rs  nested_expressions_test.rs  object_manipulation_integration_test.rs  random_float_literal_test.rs  random_integration_test.rs  read_function_integration_test.rs  scheduler_api_test.rs  scheduler_integration_test.rs  scheduler_timing_test.rs  stdlib_helpers_test.rs  stdlib_test.rs  string_advanced_integration_test.rs  string_contains_integration_test.rs  up_down_integration_test.rs  (+2 more)
(+67 files in other folders)
